--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ PORT=5000
 MONGO_URL=mongodb+srv://PratishthaNandwal:pyqApp@cluster0.romqwxl.mongodb.net/?appName=Cluster0
 
 JWT_SECRET =jchdkhu56e53653bdmfnvjd
+
+//backend url:https://resource-sharing-platform.onrender.com
