--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,4 @@ MONGO_URL=mongodb+srv://PratishthaNandwal:pyqApp@cluster0.romqwxl.mongodb.net/?a
 JWT_SECRET =jchdkhu56e53653bdmfnvjd
 
 //backend url:https://resource-sharing-platform.onrender.com
+//frontend url:https://resource-sharing-platform-1.onrender.com
